[tool.poetry]
name = "splunk-connect-for-snmp"
version = "1.6.1-beta.1"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"

include = ["splunk_connect_for_snmp/profiles/*.yaml"]

[tool.poetry.scripts]
traps = 'splunk_connect_for_snmp.traps:main'
inventory-loader = 'splunk_connect_for_snmp.inventory.loader:load'
run-walk = 'splunk_connect_for_snmp.walk:run_walk'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = {extras = ["srv"], version = "^3.12.1"}
requests = {extras = ["crypto"], version = "^2.26.0"}
celery = {extras = ["tblib"], version = "^5.2.0"}
pydantic = "^1.9.0"
opentelemetry-api = "^1.6.2"
opentelemetry-sdk = "^1.6.2"
opentelemetry-instrumentation-celery = "^0.25b2"
opentelemetry-instrumentation-logging = "^0.25b2"
opentelemetry-exporter-jaeger-thrift = "^1.10.0"
pyrate-limiter = "^2.8.1"
requests-cache = "^0.9.3"
requests-ratelimiter = "^0.2.1"
mongoengine = "^0.24.1"
#celerybeat-mongo = "^0.2.0"
celerybeat-mongo = {git="https://github.com/splunk/celerybeat-mongo", branch="main"}
pysnmplib = "^5.0.5"
PyYAML = "^6.0"
#Note this is temporary PR to upstream project is issued
wait-for-dep = { extras = ["rabbitmq"], git="https://github.com/rfaircloth-splunk/wait-for-dep.git"  }
flower = "^1.0.0"
mongolock = "^1.3.4"
pika = "^1.2.0"
JSON-log-formatter ="^0.5.1"
"ruamel.yaml" = "^0.17.21"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mike = "^1.0.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.6"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
#Run BEAT
#poetry run celery -A splunk_connect_for_snmp.poller beat --loglevel=INFO
#RUN Worker
#poetry run celery -A splunk_connect_for_snmp.poller worker --loglevel=INFO
#
#docker run --rm -d -p 27017:27017 --name example-mongo mongo:latest
#docker run --rm -d -p 5672:5672 --hostname my-rabbit --name some-rabbit rabbitmq:3