[tool.poetry]
name = "splunk-connect-for-snmp"
version = "1.14.2-beta.3"
description = ""
authors = ["omrozowicz-splunk <omrozowicz@splunk.com>"]
license = "Apache-2.0"

include = ["splunk_connect_for_snmp/profiles/*.yaml"]

[tool.poetry.scripts]
traps = 'splunk_connect_for_snmp.traps:main'
inventory-loader = 'splunk_connect_for_snmp.inventory.loader:load'
run-walk = 'splunk_connect_for_snmp.walk:run_walk'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pymongo = {extras = ["srv"], version = "^4.0.0"}
requests = {extras = ["crypto"], version = "^2.31.0"}
celery = {extras = ["tblib"], version = "5.5.3"}
pydantic = "^1.9.0"
opentelemetry-api = "^1.6.2"
opentelemetry-sdk = "^1.6.2"
opentelemetry-instrumentation-celery = "*"
opentelemetry-instrumentation-logging = "*"
opentelemetry-exporter-jaeger-thrift = "^1.10.0"
pyrate-limiter = "^2.10.0"
requests-cache = "^1.0.0"
requests-ratelimiter = "^0.7.0"
mongoengine = "^0.29.0"
celery-redbeat = {git = "https://github.com/splunk/redbeat", branch = "main"}
PyYAML = "^6.0"
#Note this is temporary PR to upstream project is issued
wait-for-dep = {extras = ["redis"], git="https://github.com/omrozowicz-splunk/wait-for-dep.git"}
mongolock = "^1.3.4"
pika = "^1.2.0"
JSON-log-formatter ="^1.0.0"
"ruamel.yaml" = "^0.18.0"
urllib3 = "^2.0.0"
jsonschema = "4.24.0"
flower = "^2.0.1"
pysnmpcrypto = "0.0.4"
pysnmp = "7.1.8"
pysmi = "^1.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
mike = "^2.0.0"
mkdocs = "^1.2.2"
mkdocs-material = "^9.0.0"
python-dotenv = "^1.0.0"
mkdocs-video = "^1.5.0"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
